# welcome

./: .gitignore  english.md  environment.md  iphone.md  markdown.md  vscode.md  向量数据库学习.md
AI/: AGI.md  ChatGPT怎么建立私有知识库.md  api.md  api学习.md  latex.md  math.md  math.tex  readme.md  test.tex  向量数据库.md  百模大战，大模型能力如何测评.md
English/: diary .md  readme.md
MySQL/: MYSQL 8.0.30源码分析INNODB的PAGE_NO跟物理文件关系.md  MYSQL8.0.30的UPDATE和COMMIT流程.md  MYSQLDUMP 8.0.26源码分析.md  TPCC-MYSQL源码阅读.md  Visual Studio Code远程调试MYSQL的安装、配置.md  explain_extra.md  gdb.md  go on.md  readme.md  source code.md  struct.py  vscode配置.md  利用MySQL源码编写最硬核的SQL审核工具.md
PostgreSQL/: PG study 2.md  PostGIS.md  loadvip.sh  patroni.md  pgbench.md  postgres_exporter.md  postgresql 权限详解.md  prometheus.md  readme.md  备份恢复.md  流复制.md
PostgreSQL源码学习/: postgresql 扩展.md  readme.md  本地环境学习.md  面试题目.md
StarRocks/: readme.md
action_model/: ChatGLM2-6B 微调笔记.md  app.py  readme.md
algorithm/: Basic PAXOS简洁数学证明.md  kth-nearest.md
ansible/: install_sshpass.sh  ip_passwd_list  nokey.sh  readme.md
architecture/: Computer_Latency.md  canal.md  cloud.md  flink.md  kafka.md  raid.md  session.md  zookeeper.md  代码托管工具.md  办公软件.md  微服务学习.md
books/: 《英语高效学习法》.md  英语高效学习法.md
c_cpp/: UML类图关系模式.md  __attribute__.c  assert.c  bitset.cpp  c++_guide.md  c_cpp_practice.md  defunct_process.c  epoll_client.cpp  epoll_server.cpp  execl_execlp.c  fcntl_test.cpp  gcc.md  gdb.md  iovec.c  macros  macros.c  mmap.c  offsetof.c  orphan_process.c  pipe.c  pragma  pragma.c  pthread.cpp  socket_client.c  socket_server.c  stat.c  string.c  struct_iovec.c  time.c  wait_process.c  waitpid_process.c  多线程编程.md  类学习.md
c_cpp/cpp/grpc/: CMakeLists.txt  address_book.txt  addressbook.proto  read_personal_details.cc  readme.md  write_personal_details.cc
compiler/: bison.md  bison_zh.md  calc.l  calc.tab.c  calc.tab.h  calc.y  flex.md  lex.yy.c  sql_yacc.yy  演示.md
elasticsearch/: SSL 证书文件.md  elasticdump.md  es_backup.py  es_restore.py  es数据同步.py  loadgen.md  op.md  pipeline.md  readme.md  skywalking.md  tdsql 安装 es 流程.md  开发规范.md  问题集.md
finance/: readme.md
googletest/: readme.md
kibana/: 01、Elastic：机器学习的原理及实践 - single metric job.md  02、Elastic：机器学习的实践 - multi metric job.md  readme.md
kubernetes/: Docker Compose.md  ES集群的chart.md  Kubernetes 中的 DNS 查询.md  Kubernetes运维.md  StatefulSet.md  docker.md  helm.md  kubesphere.md  op.md  readme.md  yaml 语法学习.md  架构讲解.md  (+1 more)
(+271 files in other folders)
